--- a/src/app/paginas/dynamic-login/dynamic-login/dynamic-login.component.html
+++ b/src/app/paginas/dynamic-login/dynamic-login/dynamic-login.component.html
@@ -37,8 +37,9 @@
           <form action="index.html" method="GET" class="margin-bottom-0">
 
             <div class="form-group m-b-15">
-              <input autocomplete="new-password" id="username" type="text" class="form-control form-control-lg" placeholder="Nombre de usuario"
-                oninput="this.value = this.value.replace(' ','')" name="username" [(ngModel)]="username" required />
+              <input autocomplete="new-password" id="username" type="text" class="form-control form-control-lg"
+                placeholder="Nombre de usuario" oninput="this.value = this.value.replace(' ','')" name="username"
+                [(ngModel)]="username" required />
             </div>
             <div class="form-group m-b-15">
 
@@ -46,8 +47,9 @@
             </div>
 
             <div class="form-group">
-              <input id="password" autocomplete="new-password" [type]="show ? 'text' : 'password'" placeholder="Contraseña" name="Password"
-                [(ngModel)]="Password" required class="form-control form-control-lg">
+              <input id="password" autocomplete="new-password" [type]="show ? 'text' : 'password'"
+                placeholder="Contraseña" name="Password" [(ngModel)]="Password" required
+                class="form-control form-control-lg">
               <span (click)="password()" class=" glyphicon glyphicon-eye-open"> <i [ngClass]="ojo"></i> </span>
             </div>
 
@@ -72,6 +74,7 @@
                 </a>
               </div>
               <label>{{Alerta}}</label>
+              <label>{{Alerta_rfc}}</label>
             </div>
             <hr />
             <p class="text-center text-grey-darker">
