--- a/src/app/modulos/bandeja-aprobacion/bandeja-aprobacion-mx/bandeja-aprobacion-mx.component.html
+++ b/src/app/modulos/bandeja-aprobacion/bandeja-aprobacion-mx/bandeja-aprobacion-mx.component.html
@@ -31,6 +31,11 @@
         (change)="cambio('facturas_proveedor')" value="facturas_proveedor">
       <label class="form-check-label" for="facturas_proveedor"> Facturas proveedor </label>
     </div>
+    <div class="form-check form-check-inline">
+      <input class="form-check-input" type="radio" name="consulta_amortizadores" id="nota_credito"
+        (click)="cambio('nota_credito')" value="nota_credito">
+      <label class="form-check-label" for="nota_credito_radio">Nota de Crédito</label>
+    </div>
   </div>
 </div>
 <!-- Fin de los botones -->
@@ -69,5 +74,9 @@
 <app-list-comprobaciones-pais #tabla_comprobaciones [bandeja_aprobacion]="true" [mostrar_btn]="false"
   *ngIf="globals.menuDinamico.bandeja_aprobacion_comprobacion_gasto_viaje && tablaMostrar === 'comprobacion_gasto_viaje'">
 </app-list-comprobaciones-pais>
+
+<!-- Notas de Crédito-->
+<app-list-notas-credito-pais *ngIf="tablaMostrar == 'nota_credito'" [mostrar_boton]="mostrar_btn">
+</app-list-notas-credito-pais>
 
 <!-- Fin de tablas con filtro -->
