[add] Ramirez angel ajuste de lisa nota de credito

--- a/src/app/modulos/notas-credito/filtro-notas-credito/filtro-notas-credito.component.html
+++ b/src/app/modulos/notas-credito/filtro-notas-credito/filtro-notas-credito.component.html
@@ -1,3 +1,18 @@
-<p>
-  filtro-notas-credito works!
-</p>
+<div id="content" class="row">
+  <div class="panel-heading" style="padding: 10px !Important;">
+    <button id="filtroConsulta" class="btn btn-primary mb-2 " type="button" data-toggle="collapse"
+      data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+      Filtrar Consulta
+      <i class="fa fa-filter fa-fw"></i>
+    </button>
+    <div class="collapse" id="collapseExample">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="panel-body">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
