--- a/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
+++ b/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
@@ -5,7 +5,7 @@
         <h4 class="panel-title">Lista - Notas de Crédito</h4>
       </div>
       <div class="panel-body table-responsive">
-        <table id="list_notas_credito " datatable
+        <table id="list_notas_credito "
           class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody"
           style="max-width: 100%; width: 100% ">
           <caption></caption>
