--- a/src/app/modulos/bandeja-aprobacion/bandeja-aprobacion-mx/bandeja-aprobacion-mx.component.html
+++ b/src/app/modulos/bandeja-aprobacion/bandeja-aprobacion-mx/bandeja-aprobacion-mx.component.html
@@ -34,7 +34,7 @@
     <div class="form-check form-check-inline">
       <input class="form-check-input" type="radio" name="consulta_amortizadores" id="nota_credito"
         (click)="cambio('nota_credito')" value="nota_credito">
-      <label class="form-check-label" for="nota_credito_radio">Nota de Crédito</label>
+      <label class="form-check-label" for="nota_credito_radio">Notas de Crédito</label>
     </div>
   </div>
 </div>
