--- a/src/app/modulos/notas-credito/list-notas-credito-pais/list-notas-credito-pais.component.html
+++ b/src/app/modulos/notas-credito/list-notas-credito-pais/list-notas-credito-pais.component.html
@@ -1,3 +1,3 @@
-<app-filtro-notas-credito></app-filtro-notas-credito>
+<app-filtro-notas-credito (enviarData)="actualizarTabla($event)"></app-filtro-notas-credito>
 <app-list-notas-credito-rci #listnotascredito [mostrar_boton]="mostrar_boton" *ngIf="pais === 'MX'">
 </app-list-notas-credito-rci>
