[add] enrutamiento de los nuevos componentes de comprobaciones gastos

--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-main/gastos-viajes-main.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-main/gastos-viajes-main.component.html
@@ -1,3 +1,12 @@
-<p>
-  gastos-viajes-main works!
-</p>
+<div id="content" class="content">
+  <ol class="breadcrumb pull-right">
+    <li class="breadcrumb-item">
+      <a routerLink="/home/inicio">Comprobaciones</a>
+    </li>
+    <li class="breadcrumb-item active">Gastos Viaje</li>
+  </ol>
+  <h1 class="page-header">Comprobar Gastos de Viaje<small></small></h1>
+  <div class="col-md-12">
+    <router-outlet></router-outlet>
+  </div>
+</div>
