--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
@@ -1,3 +1,288 @@
-<p>
-  gastos-viajes-form works!
-</p>
+<div class="row">
+  <div class="col-12">
+    <form [formGroup]="formulario_header">
+      <div class="row">
+        <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
+          <label for="usuario">Usuario</label>
+          <input formControlName="usuario" type="text" [value]="comprobacion.nombre_usuario" class="form-control"
+            id="usuario">
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
+          <label for="folio_comprobacion">Folio de Comprobación</label>
+          <input type="text" formControlName="folio_comprobacion" [value]="comprobacion.folio_comrpobacion"
+            class="form-control" id="folio_comprobacion">
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
+          <label for="contribuyente">Contribuyente <span class="requerido">*</span> </label>
+          <select2 [data]="lista_constribuyentes" [value]="startValue_contribuyente"
+            [options]="{placeholder: 'Seleccione una Empresa'}" (valueChanged)="onContribuyenteSelected($event)"
+            name="contribuyente" id="contribuyente">
+          </select2>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
+          <label for="cnetro_costos">Centro de Costos <span class="requerido">*</span> </label>
+          <select2 [data]="lista_centros_costo" [value]="startValue_centros_costo"
+            [options]="{placeholder: 'Seleccione un Centro de Costo'}" (valueChanged)="onCECOSelected($event)"
+            name="cnetro_costos" id="cnetro_costos">
+          </select2>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
+          <label for="tipo_gasto">Tipo de Gasto</label>
+          <input type="text" formControlName="tipo_gasto" [value]="comprobacion.tipo_gastos" class="form-control"
+            id="tipo_gasto">
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
+          <div class="form-group">
+            <label for="monto_reembolsar">Monto a Reembolsar</label>
+            <input currencyMask formControlName="monto_reembolsar" [options]="{ thousands: ',', decimal: '.'}"
+              type="text" class="form-control" id="monto_reembolsar" [(ngModel)]="comprobacion.monto_reembolsar"
+              placeholder="">
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
+          <div class="form-group">
+            <label for="recuperable">Recuperable</label>
+            <input type="checkbox" formControlName="recuperable" class="form-control" id="recuperable"
+              [(ngModel)]="comprobacion.recuperable" placeholder="">
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
+          <div class="form-group">
+            <label for="descripcion_motivo">Motivo</label>
+            <textarea class="form-control" formControlName="motivo" id="descripcion_motivo" rows="3"
+              [(ngModel)]="comprobacion.motivo"></textarea>
+          </div>
+        </div>
+      </div>
+    </form>
+    <div class="row">
+      <div class="col-12">
+        <button class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg"> Agregar Comprobante
+        </button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div>
+          <div class="row">
+            <div class="panel-body table-responsive">
+              <table id="tabla_departamentos_rci"
+                class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody">
+                <caption></caption>
+                <thead>
+                  <tr>
+                    <th scope="">#</th>
+                    <th scope="">Estatus</th>
+                    <th scope="">Fecha</th>
+                    <th scope="">Forma de Pago</th>
+                    <th scope="">Razon Social</th>
+                    <th scope="">Concepto</th>
+                    <th scope="">Moneda del Comprobante</th>
+                    <th scope="">Importe a Reembolsar</th>
+                    <th scope="">Documentos</th>
+                    <th scope="">Acciones</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr class="gradeU" *ngFor="let comprobante of lista_comprobantes; let i = index">
+                    <td>{{i + 1}}</td>
+                    <td>{{comprobante.emisor.nombre}}</td>
+                    <td>{{comprobante.complemento.timbreFiscalDigital.uuid}}</td>
+                    <td>{{comprobante.fecha}}</td>
+                    <td>{{comprobante.metodoPago}}</td>
+                    <td>{{comprobante.formaPago}}</td>
+                    <td>{{comprobante.moneda}}</td>
+                    <td>{{comprobante.total | currency}}</td>
+                    <td>
+                      <button><em class="fas fa-file-pdf"></em></button>
+                      <button><em class="fas fa-file-archive"></em></button>
+                      <button><em class="fas fa-folder"></em></button>
+                    </td>
+                    <td>
+                      <button (click)="eliminarConcepto(i)"><em class="fas fa-trash"></em></button>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade bd-example-modal-lg" id="modal_comprobante" tabindex="-1" role="dialog"
+  aria-labelledby="myLargeModalLabel" data-backdrop="static" data-keyboard="false" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Nuevo Comprobante</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col">
+            <div class="row">
+              <div class="col">
+                <div class="switcher p-t-10">
+                  <input type="checkbox" id="nota_credito" class="ml-5" name="nota_credito"
+                    [checked]="comprobante_papel" [(ngModel)]="comprobante_papel"
+                    (click)="onTipoDocumentoChange($event.target.checked)">
+                  <label for="nota_credito" style="width: auto; margin-left: -15px;"> XML / Papel </label>
+                </div>
+              </div>
+            </div>
+            <!-- <div class="form-group">
+              <div class="switcher p-t-10">
+                <label for="comprobannte_papel"> XML / Papel</label>
+                <input type="checkbox" id="comprobannte_papel" name="comprobannte_papel"
+                  [(ngModel)]="comprobante_papel">
+              </div>
+            </div> -->
+            <div *ngIf=" comprobante_papel !== null && !comprobante_papel" class="row mt-3">
+              <div class="col">
+                <div class="row">
+                  <div class="form-group col-sm-12 col-md-4">
+                    <div class="input-group input-file" name="Fichier1">
+                      <span class="input-group-btn">
+                        <label class="btn btn-block btn-primary">Archivo
+                          <input for="archivo" accept=".xml,.XML" type="file" style="display: none;"
+                            (change)="cargarArchivo( $event, input_xml, 'xml')">
+                        </label>
+                      </span>
+                      <input #input_xml type="text" value="Seleccione archivo..." disabled class="form-control"
+                        placeholder='Seleccione archivo...' id="archivo" name="archivo" />
+                    </div>
+                  </div>
+                </div>
+                <div class="row" *ngIf="documento_cfdi">
+                  <span class="col-sm-12 col-md-6 col-lg-4 mt-2"> <strong>Receptor: </strong>
+                    {{ documento_cfdi.receptor.nombre }} </span>
+                  <span class="col-sm-12 col-md-6 col-lg-4 mt-2"> <strong>RFC Receptor: </strong>
+                    {{ documento_cfdi.receptor.rfc }} </span>
+                  <span class="col-sm-12 col-md-6 col-lg-4 mt-2"> <strong>Emisor: </strong>
+                    {{ documento_cfdi.emisor.nombre }} </span>
+                  <span class="col-sm-12 col-md-6 col-lg-4 mt-2"> <strong>RFC Emisor: </strong>
+                    {{ documento_cfdi.emisor.rfc }} </span>
+                  <span class="col-sm-12 col-md-6 col-lg-4 mt-2"> <strong>Fecha: </strong>
+                    {{ documento_cfdi.fecha | date }}
+                  </span>
+                  <span class="col-sm-12 col-md-6 col-lg-4 mt-2"> <strong>Folio Fiscal: </strong>
+                    {{ documento_cfdi.complemento.timbreFiscalDigital.uuid }} </span>
+                  <span class="col-sm-12 col-md-6 col-lg-4 mt-2"> <strong>Moneda: </strong> {{ documento_cfdi.moneda}}
+                  </span>
+                  <span class="col-sm-12 col-md-6 col-lg-4 mt-2"> <strong>Subtotal: </strong>
+                    {{ documento_cfdi.subTotal | currency: "$" }} </span>
+                  <span class="col-sm-12 col-md-6 col-lg-4 mt-2"> <strong>Total: </strong>
+                    {{ documento_cfdi.total | currency: "$"}} </span>
+                </div>
+                <div class="row mt-3" *ngIf="documento_cfdi">
+                  <div class="col">
+                    <table class="table table-striped table-bordered table-hover table-fixed">
+                      <caption></caption>
+                      <thead>
+                        <th scope="">#</th>
+                        <th scope="">Concepto</th>
+                        <th scope="">Cantidad</th>
+                        <th scope="">Valor Unitario</th>
+                        <th scope="">Importe</th>
+                      </thead>
+                      <tbody>
+                        <tr *ngFor="let item of documento_cfdi.conceptos; let i = index">
+                          <td> {{ i + 1 }}</td>
+                          <td> {{ item.descripcion }}</td>
+                          <td> {{ item.cantidad }}</td>
+                          <td> {{ item.valorUnitario }}</td>
+                          <td> {{ item.importe }}</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row mt-3" *ngIf="comprobante_papel">
+              <div class="col">
+                <div class="row">
+                  <div class="col-md-3">
+                    <div class="form-group">
+                      <label>Archivo <span class="requerido">*</span> </label>
+                      <div class="form-group">
+                        <div class="input-group input-file" name="Fichier1">
+                          <span class="input-group-btn">
+                            <label class="btn btn-block btn-primary">Archivo
+                              <input for="archivo" accept="*.*" type="file" style="display: none;"
+                                (change)="cargarArchivo( $event, input_xml)">
+                            </label>
+                          </span>
+                          <input #input_xml type="text" value="Seleccione archivo..." disabled class="form-control"
+                            placeholder='Seleccione archivo...' id="archivo" name="archivo" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-3">
+                    <label for="nombre">Fecha Comprobante </label>
+                    <my-date-picker name="fechaIniViaje" id="fecha_comprobante" [placeholder]="'Fecha Inicio'"
+                      [options]="globals.myDatePickerOptions" (dateChanged)="onFehcaSelected($event)">
+                    </my-date-picker>
+                  </div>
+
+                  <div class="col-md-3">
+                    <label for="numero_comprobante">Número Comprobante</label>
+                    <input type="text" name="numero_comprobante" id="numero_comprobante'" maxlength="25"
+                      class="form-control" placeholder="numero_comprobante">
+                  </div>
+
+                  <div class="col-md-3">
+                    <label for="forma_pago">Forma de Pago <span class="requerido">*</span> </label>
+                    <!-- <select2 [data]="lista_forma_pago" [options]="{placeholder: 'Seleccione Forma de Pago'}"
+                        (valueChanged)="onFormaPagoSelect($event)" name="forma_pago" id="forma_pago">
+                      </select2> -->
+                  </div>
+
+                  <div class="col-md-3">
+                    <label for="selec_moneda_gasto_viaje">Moneda <span class="requerido">*</span> </label>
+                    <!-- <select2 [data]="lista_monedas" [value]="valor_tipomoneda" [options]="{placeholder: 'Seleccione moneda... '}"
+                        (valueChanged)="onMonedaSeleccionado($event)" name="selec_moneda_gasto_viaje" id="selec_moneda_gasto_viaje"
+                        [disabled]="true">
+                      </select2> -->
+                  </div>
+
+                </div>
+                <!-- Visible cuando los datos del comprobante han sido cargados -->
+                <ng-container>
+                  <div class="row">
+                  </div>
+                  <!-- <div class="row">
+                      <app-row-concepto-extranjero class="col-12" *ngFor="let item of controles.conceptos.value; let i=index"
+                        [concepto]="item" (removeConcepto)="removeConcepto(i)" (addConcepto)="addConcepto($event)"
+                        [lista_cuentas]="lista_cuentas">
+                      </app-row-concepto-extranjero>
+                    </div> -->
+                </ng-container>
+                <div class="row mt-3">
+                  <div class="col-md-3">
+                    <label for="tipo_cambio">Total:</label>
+                    <input currencyMask type="text" name="tipo_cambio" id="tipo_cambio'" maxlength="50"
+                      class="form-control" placeholder="" readonly>
+                  </div>
+                </div>
+                <!-- </form> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" (click)="cerrarModal()" data-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-primary" (click)="addConcepto()">Agregar</button>
+      </div>
+    </div>
+  </div>
+</div>
