--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
@@ -1,3 +1,44 @@
-<p>
-  gastos-viajes-list works!
-</p>
+<div class="row">
+  <div class="col-md-2" style="padding-bottom: 2em;">
+    <a id="agregarDepartamento" routerLink="/home/comprobaciones/gastos_viaje/add" class="btn btn-primary"
+      *ngIf="globals.menuDinamico.gastos_comprobacion_prestacion_add"> Nueva Comprobación Gastos viaje </a>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-lg-12">
+    <div class="panel panel-inverse">
+      <div class="panel-heading">
+        <h4 class="panel-title">Lista - Comprobaciones Gastos de Viaje</h4>
+      </div>
+      <div class="panel-body table-responsive">
+        <table id="tabla_departamentos_rci"
+          class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody"
+          width="100%" style="max-width: 100%; ">
+          <thead>
+            <tr>
+              <th>Departamento</th>
+              <th>Clave Departamento</th>
+              <th>Estatus</th>
+              <th>Editar</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="gradeU" *ngFor="let departamento of listaDepartamentosRci"
+              [ngClass]="{'text-danger':departamento.activo == '0'}">
+              <td>{{departamento.descripcion}}</td>
+              <td>{{departamento.clave_departamento}}</td>
+              <td>{{departamento.activo == 1 ? 'Activo' : 'Inactivo'}}</td>
+              <td>
+                <a class="btn btn-primary text-white editar-departamento"
+                  (click)="editarDepartamento(departamento.identificador)">
+                  Editar
+                </a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
