--- a/src/app/modulos/facturas-proveedor/list-facturas-proveedor-mx/list-facturas-proveedor-mx.component.html
+++ b/src/app/modulos/facturas-proveedor/list-facturas-proveedor-mx/list-facturas-proveedor-mx.component.html
@@ -17,16 +17,16 @@
           <caption></caption>
           <thead>
             <tr>
-              <th scope="" class="align-middle">Descripción</th>
               <th scope="" class="align-middle">Contribuyente</th>
               <th scope="" class="align-middle">Sucursal</th>
               <th scope="" class="align-middle">Usuario Acreedor</th>
+              <th scope="" class="align-middle">Orden de Compra</th>
+              <th scope="" class="align-middle">Estatus Contabilización</th>
+              <th scope="" class="align-middle">Folio Fiscal</th>
               <th scope="" class="align-middle text-center">Estatus Aprobación </th>
-              <th scope="" class="align-middle">Estatus SAP</th>
               <th scope="" class="align-middle">Fecha Contabilización</th>
               <th scope="" class="align-middle">Fecha Creación</th>
-              <th scope="" class="align-middle">Folio SAP</th>
-              <th scope="" class="align-middle">Tipo de Gasto</th>
+              <th scope="" class="align-middle">Tipo de Documento</th>
               <th scope="" class="align-middle">Detalles</th>
               <th scope="" *ngIf="usuario.acreedor"> Cargar NC </th>
               <th scope="" *ngIf="usuario.aprobador"> Aprobación </th>
@@ -38,10 +38,12 @@
             <!--  [ngClass]="{ 'text-danger': item.activo == '0' }"  -->
             <tr class="gradeU" *ngFor="let item of lista_facturas_proveedor">
 
-              <td> {{ item.descripcion }} </td>
               <td> {{ item.empresa }} </td>
               <td> {{ item.hotel }} </td>
               <td> {{ item.usuario_acreedor }} </td>
+              <td> {{ item.descripcion }} </td>
+              <td> {{ item.estatus_sap_descripcion }} </td>
+              <td> {{ item.folio_fiscal }} </td>
               <td>
                 <div>
                   {{ item.estatus_descripcion }}
@@ -53,29 +55,12 @@
                   <!-- <span class="btn badge badge-success">Detalles</span> -->
                 </div>
               </td>
-              <td> {{ item.estatus_sap_descripcion }} </td>
               <td> {{ item.fecha_contabilizacion | date:'yyyy-MM-dd' }} </td>
               <td> {{ item.fecha_creacion | date:'yyyy-MM-dd' }} </td>
               <td> {{ item.folio_sap }} </td>
-              <td> {{ item.tipo_gasto }} </td>
-
-              <!-- <td class="align-middle">{{ item.empresa }}</td>
-                                <td class="align-middle">{{ item.hotel }}</td>
-                                <td class="align-middle">{{ item.descripcion }}</td>
-                                <td class="align-middle text-right">{{ item.monto | currency }}</td>
-                                <td class="align-middle">{{ item.destino }}</td> -->
-              <!-- <td class="align-middle">{{ item.numAnticipo }}</td> -->
-              <!-- <td class="align-middle">{{ item.fecha_creacion | date:'yyyy-MMM-dd' }}</td>
-                                <td class="align-middle">{{ item.fecha_inicio_viaje | date:'yyyy-MMM-dd' }}</td>
-                                <td class="align-middle">{{ item.fecha_fin_viaje | date:'yyyy-MMM-dd' }}</td>
-                                <td class="align-middle">{{ item.estatus_descripcion }}</td>
-                                <td class="align-middle">{{ item.estatus_sap_descripcion }}</td> -->
               <td class="align-middle">
                 <button class="btn btn-primary" (click)="verDetalles($event.target, item.id)"> Ver </button>
-                <!-- <button class="btn btn-primary"> Ver </button> -->
               </td>
-              <!-- <td class="align-middle">{{ item.detalle }}</td> -->
-              <!-- <td class="align-middle">{{ item.activo == 1 ? 'Activo' : 'Inactivo' }}</td> -->
               <td *ngIf="usuario.acreedor && item.folio_sap !== '' ">
                 <!-- <button class="btn btn-primary ml-2" (click)="cargarNC(item.id)"><i class="fas fa-file-upload"></i>
                 </button> -->
@@ -84,18 +69,19 @@
               </td>
               <td class="no-wraptext" *ngIf="usuario.aprobador">
                 <ng-container *ngIf="true">
-                  <!-- <button *ngIf="item.aprobacion == 1" (click)="aprobar(item.id, item.documento_id)"
-                                      class="btn btn-info ml-2"><i class="far fa-check-circle"></i>
-                                    </button> -->
-                  <button *ngIf="item.aprobacion == 1" class="btn btn-info ml-2">
+                  <button #button_aprobar *ngIf="item.aprobacion == 1"
+                    (click)="aprobar(button_aprobar, item.id, item.documento_id)" class="btn btn-info ml-2"><i
+                      class="far fa-check-circle"></i>
+                  </button>
+                  <!-- <button *ngIf="item.aprobacion == 1" class="btn btn-info ml-2">
                     <i class="far fa-check-circle"></i>
+                  </button> -->
+                  <button *ngIf="item.aprobacion == 1" class="btn btn-danger ml-2" (click)="rechazar(item.id)"> <i
+                      class="fas fa-ban"></i>
                   </button>
-                  <!-- <button *ngIf="item.aprobacion == 1" class="btn btn-danger ml-2" (click)="rechazar(item.id)"> <i
-                                        class="fas fa-ban"></i>
-                                    </button> -->
-                  <button *ngIf="item.aprobacion == 1" class="btn btn-danger ml-2">
+                  <!-- <button *ngIf="item.aprobacion == 1" class="btn btn-danger ml-2">
                     <i class="fas fa-ban"></i>
-                  </button>
+                  </button> -->
                 </ng-container>
               </td>
               <td>
