--- a/src/app/modulos/bandeja-aprobacion/bandeja-aprobacion-mx/bandeja-aprobacion-mx.component.html
+++ b/src/app/modulos/bandeja-aprobacion/bandeja-aprobacion-mx/bandeja-aprobacion-mx.component.html
@@ -1,7 +1,7 @@
 <!-- Muestra los botones para seleccionar entre preliminares, solicitudes, amortizaciones -->
 <div class="row">
   <div class="col-md-12">
-    <div class="form-check form-check-inline">
+    <div *ngIf="globals.menuDinamico.bandeja_aprobacion_acreedores_diversos" class="form-check form-check-inline">
       <input class="form-check-input" type="radio" name="consulta_amortizadores" id="preliminares_radio_amortizadores"
         [checked]="true" (click)="cambio('preliminares')" value="preliminares">
       <label class="form-check-label" for="preliminares_radio_amortizadores">Acreedores Diversos</label>
@@ -11,7 +11,7 @@
         (change)="cambio('solicitudes')" value="solicitudes">
       <label class="form-check-label" for="solicitudes_radio_amortizadores">Gastos de Viaje</label>
     </div>
-    <div class="form-check form-check-inline">
+    <div *ngIf="globals.menuDinamico.bandeja_aprobacion_amortizacion" class="form-check form-check-inline">
       <input class="form-check-input" type="radio" name="consulta_amortizadores" id="amortizadores_radio_amortizadores"
         (change)="cambio('amortizacion')" value="amortizacion">
       <label class="form-check-label" for="amortizadores_radio_amortizadores"> Amortizaciones </label>
@@ -45,11 +45,15 @@
 <!-- ----------------- -->
 
 <!-- Acreedores Diversos  -->
-<app-list-acreedores-diversos-pais *ngIf="tablaMostrar == 'preliminares'" [mostrar_btn]="mostrar_btn">
+<app-list-acreedores-diversos-pais
+  *ngIf="globals.menuDinamico.bandeja_aprobacion_acreedores_diversos && tablaMostrar == 'preliminares'"
+  [mostrar_btn]="mostrar_btn">
 </app-list-acreedores-diversos-pais>
 
 <!-- Amortizaciones -->
-<app-list-amortizacion-pais *ngIf="tablaMostrar == 'amortizacion'" [mostrar_btn]="mostrar_btn">
+<app-list-amortizacion-pais
+  *ngIf="globals.menuDinamico.bandeja_aprobacion_amortizacion &&  tablaMostrar == 'amortizacion'"
+  [mostrar_btn]="mostrar_btn">
 </app-list-amortizacion-pais>
 
 <!-- Gastos de Viaje -->
