[add] Ramirez agel

--- a/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
+++ b/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
@@ -28,7 +28,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr class="gradeU" *ngFor="let item of lista_facturas_proveedor">
+            <tr class="gradeU" *ngFor="let item of lista_notas_credito">
               <td> {{ item.descripcion }} </td>
               <td> {{ item.empresa }} </td>
               <td> {{ item.hotel }} </td>
