--- a/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
+++ b/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
@@ -67,7 +67,12 @@
                 </ng-container>
               </td>
               <td class="align-middle">
-                <button class="btn btn-primary" (click)="editaNotaCredito(item.id)"> Editar </button>
+                <button *ngIf="item.numero_nivel === 1" class="btn btn-primary" (click)="editaNotaCredito(item.id)">
+                  Editar </button>
+                <button *ngIf="item.numero_nivel === 2" class="btn btn-primary" (click)="ingresaDatos(item.id)">NV
+                  2</button>
+                <button *ngIf="item.numero_nivel === item.numero_niveles_aprobacion" class="btn btn-primary">NV
+                  3</button>
               </td>
               <td>
                 <button class="btn ml-2"> <i class="fas fa-file mr-1"></i>
