[add] validaciones nota credito

--- a/src/app/modulos/notas-credito/notas-credito/notas-credito.component.html
+++ b/src/app/modulos/notas-credito/notas-credito/notas-credito.component.html
@@ -98,7 +98,8 @@
     </div>
   </form>
   <div class="row">
-    <button class="btn btn-primary" (click)="cargarDocumento()"> cargar </button>
+    <button [disabled]="!formulario_header.valid || !formulario_documentos.valid" class="btn btn-primary"
+      (click)="cargarDocumento()"> cargar </button>
   </div>
 </div>
 
