[add] nodal actualizar cuenta y site

--- a/src/app/modulos/listar-cfdi/listar-cfdi-mx/listar-cfdi-mx.component.html
+++ b/src/app/modulos/listar-cfdi/listar-cfdi-mx/listar-cfdi-mx.component.html
@@ -19,5 +19,6 @@
 
 </div>
 
-<app-detalle-complementos [complementos_pago]="complementos_pago" [documentos_relacionados]="documentos_relacionados">
+<app-detalle-complementos [documentos_anexos]="documentos_anexos" [complementos_pago]="complementos_pago"
+  [documentos_relacionados]="documentos_relacionados">
 </app-detalle-complementos>
