--- a/src/app/modulos/notas-credito/notas-credito/notas-credito.component.html
+++ b/src/app/modulos/notas-credito/notas-credito/notas-credito.component.html
@@ -80,7 +80,7 @@
               </div>
             </div>
           </div>
-          <div *ngIf="usuario.aprobador == 1  && nivel_aprobacion == 1 " class="col-sm-12 col-md-6">
+          <!-- <div *ngIf="usuario.aprobador == 1  && nivel_aprobacion == 1 " class="col-sm-12 col-md-6">
             <div class="form-row">
               <div class="form-group col-12">
                 <label for="unidad_responsable">Ingresar Cuenta Contable<span class="requerido">*</span> </label>
@@ -92,7 +92,7 @@
                 <input type="email" class="form-control" formControlName="site" id="unidad_responsable" maxlength="50">
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
