[add] ramirez angel

--- a/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
+++ b/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
@@ -23,7 +23,7 @@
               <th scope="" class="align-middle">Detalles</th>
               <th scope="" *ngIf="usuario.acreedor"> Cargar NC </th>
               <th scope="" *ngIf="usuario.aprobador"> Aprobación </th>
-              <th scope="" *ngIf="usuario.aprobador"> Editar </th>
+              <th scope="" *ngIf="usuario.aprobador"> Editar Nota de Crédito </th>
               <th scope=""> Validación </th>
             </tr>
           </thead>
