--- a/src/app/modulos/listar-cfdi/detalle-complementos/detalle-complementos.component.html
+++ b/src/app/modulos/listar-cfdi/detalle-complementos/detalle-complementos.component.html
@@ -18,26 +18,30 @@
                 <tr>
                   <th scope="col "> # </th>
                   <th scope="col">Nombre</th>
+                  <th scope="col">Extensión</th>
                   <th scope="col">Acción</th>
                 </tr>
               </thead>
               <tbody>
-                <ng-container *ngIf=" true ; else sinRelacionados">
-                  <tr>
-                    <td> 1 </td>
-                    <td> archivo_anexo.pdf </td>
+                <ng-container *ngIf="documentos_anexos.length > 0 ;  let i = index;  else sinAnexos">
+                  <tr *ngFor="let anexo of documentos_anexos">
+                    <td> {{ i + 1 }} </td>
+                    <td> {{ anexo.nombre_archivo }} </td>
+                    <td> {{ anexo.extension }} </td>
                     <td class="text-center">
-                      <a target="_blank" href="" class="btn btn-sm  btn-outline-primary"> <em
-                          class="far fa-file-pdf"></em> </a>
-                      <a target="_blank" href="" class="btn btn-sm text-danger"> <em class="fas fa-trash"></em>
-                      </a>
+                      <button class="btn btn-sm btn-outline-primary" (click)="obtenerURl(anexo)"> <em
+                          class="far fa-file-pdf"></em> </button>
+                      <button target="_blank" href="" class="btn btn-sm text-danger"
+                        (click)="eliminarAnexo(anexo.id_anexo)">
+                        <em class="fas fa-trash"></em>
+                      </button>
                     </td>
                   </tr>
                 </ng-container>
-                <ng-template #sinRelacionados>
+                <ng-template #sinAnexos>
                   <tr>
                     <td colspan=5 class="text-center">
-                      Sin Documentos Relacionados.
+                      Sin Anexos.
                     </td>
                   </tr>
                 </ng-template>
@@ -60,7 +64,7 @@
                 <ng-container
                   *ngIf="documentos_relacionados && documentos_relacionados.length > 0 ; else sinRelacionados">
                   <tr *ngFor="let relacionado of documentos_relacionados">
-                    <td> </td>
+                    <td>{{ relacionado.folio_fiscal }} </td>
                     <td> {{ relacionado.tipo_relacion }} </td>
                     <td> {{ relacionado.relacion }} </td>
                     <td> {{ relacionado.subtotal | currency : '$' }} </td>
