[add]solucion de ichus modal detalle  la tabla y quitar columnas de tablas que no sirben en RCI

--- a/src/app/modulos/orden-compra/filtro-orden-compra/filtro-orden-compra.component.html
+++ b/src/app/modulos/orden-compra/filtro-orden-compra/filtro-orden-compra.component.html
@@ -44,7 +44,7 @@
               [(ngModel)]="filtroConsulta.codigo_compania" formControlName="codigo_compania">
           </div> -->
 
-          <div class="col-md-3 col-lg-3">
+          <!-- <div class="col-md-3 col-lg-3">
             <label class="label-control" for="anticipo">Anticipo</label>
             <select name="anticipo" id="anticipo" class="form-control" placeholder="Anticipo"
               [(ngModel)]="filtroConsulta.anticipo" formControlName="anticipos">
@@ -52,7 +52,7 @@
               <option value=1>Sí</option>
               <option value=0>No</option>
             </select>
-          </div>
+          </div> -->
           <div class="col-md-3 col-lg-3">
             <label class="label-control" for="orden_compra">Orden de Compra</label>
             <input type="text" class="form-control" id="orden_compra" placeholder="Orden Compra" name="orden_compra"
