--- a/src/app/modulos/carga-documentos/modal-detalle-oc-mx/modal-detalle-oc-mx.component.html
+++ b/src/app/modulos/carga-documentos/modal-detalle-oc-mx/modal-detalle-oc-mx.component.html
@@ -32,7 +32,7 @@
         </div>
         <br>
 
-        <table class="table table-hover" id="productos">
+        <table class="table table-hover" id="tabla_detalle">
           <thead>
             <tr>
               <th scope="col" class="text-center">Descripción</th>
