--- a/src/app/modulos/carga-documentos/modal-detalle-cr/modal-detalle-cr.component.html
+++ b/src/app/modulos/carga-documentos/modal-detalle-cr/modal-detalle-cr.component.html
@@ -15,7 +15,7 @@
               <th scope="col">Posición</th>
               <th scope="col">Cantidad OC</th>
               <th scope="col">Cantidad EM</th>
-              <th scope="col">Movimiento</th>
+              <!-- <th scope="col">Movimiento</th> -->
               <th scope="col">Número OC</th>
             </tr>
           </thead>
@@ -26,7 +26,7 @@
               <td> {{ item.posicion }}</td>
               <td> {{ item.cantidad_doc }}</td>
               <td> {{ item.cantidad_em }}</td>
-              <td> {{ item.movimiento }}</td>
+              <!-- <td> {{ item.movimiento }}</td> -->
               <td> {{ item.num_orden_compra }}</td>
             </tr>
           </tbody>
